fix(property): fix align center #INFR-11191

--- a/src/property/styles/properties.scss
+++ b/src/property/styles/properties.scss
@@ -123,6 +123,7 @@
 
         .thy-property-item-wrapper {
             display: flex;
+            align-items: center;
             flex: 1;
             min-width: 0;
         }
